--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.11.7",
+    "@antv/f2": "^3.7.7",
+    "@antv/g2": "^4.0.15",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "c3": "^0.7.20",
+    "d3": "^6.2.0",
+    "d3-array": "^2.8.0",
+    "d3-axis": "^2.0.0",
+    "d3-scale": "^3.2.3",
+    "d3-selection": "^2.0.0",
     "react": "^16.14.0",
+    "react-c3js": "^0.1.20",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3"
   },
