--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "charting-spike",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://zacharymctague.github.io/charting-spike",
   "dependencies": {
     "@antv/data-set": "^0.11.7",
     "@antv/f2": "^3.7.7",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
