--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "charting-spike",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://zacharymctague.github.io/charting-spike",
+  "homepage": "https://zacharymctague.github.io/chart-spike",
   "dependencies": {
     "@antv/data-set": "^0.11.7",
     "@antv/f2": "^3.7.7",
@@ -21,11 +21,14 @@
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3"
   },
+
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
